--- a/index.html
+++ b/index.html
@@ -18,8 +18,17 @@
           href="https://du11hjcvx0uqb.cloudfront.net/dist/brandable_css/289606ed00d3518a0ed0dc2afd44d6f0/new_styles_normal_contrast/jst/FindFlickrImageView-3605dd74b1.css"/>
 
     <link rel="stylesheet" href="InstructureIcons-Line.css"/>
+    <style>
+      body, #body, #right-side {
+        min-width: 200px;
+        position: absolute;
+        margin-right: 0px;
+        padding-right: 0px;
+        width: 98%;
+      }
+    </style>
 </head>
-<body>
+<body style="min-width: 200px !important;">
 <div id="body" style="margin: .5em; visible: hidden;">
     <h1>Please Read!</h1>
     <h2>First time setup</h2>
